Add unit and integration tests for frontend and backend